--- a/composer.json
+++ b/composer.json
@@ -8,8 +8,7 @@
         }
     ],
     "require": {
-        "phpunit/phpunit": "^8.5",
-        "php" : "7.4"
+        "phpunit/phpunit": "^8.5"
     },
     "autoload": {
         "psr-4": {"HighlightLib\\": "src/"}
